criaçao do controller e atualizacao swagger
