# src/main/java/com/vascobancoconta/vascobancocontaarti/models/Cheque.java
@@ -1,0 +1,76 @@
+package com.vascobancoconta.vascobancocontaarti.models;
+
+public class Cheque {
+    Integer id;
+    Double valor;
+    String valorExtenso;
+    String dataAtual;
+    String nome;
+    String numero;
+    String serie;
+    String dataEntrada;
+
+    public Integer getId() {
+        return id;
+    }
+
+    public void setId(Integer id) {
+        this.id = id;
+    }
+
+    public Double getValor() {
+        return valor;
+    }
+
+    public void setValor(Double valor) {
+        this.valor = valor;
+    }
+
+    public String getValorExtenso() {
+        return valorExtenso;
+    }
+
+    public void setValorExtenso(String valorExtenso) {
+        this.valorExtenso = valorExtenso;
+    }
+
+    public String getDataAtual() {
+        return dataAtual;
+    }
+
+    public void setDataAtual(String dataAtual) {
+        this.dataAtual = dataAtual;
+    }
+
+    public String getNome() {
+        return nome;
+    }
+
+    public void setNome(String nome) {
+        this.nome = nome;
+    }
+
+    public String getNumero() {
+        return numero;
+    }
+
+    public void setNumero(String numero) {
+        this.numero = numero;
+    }
+
+    public String getSerie() {
+        return serie;
+    }
+
+    public void setSerie(String serie) {
+        this.serie = serie;
+    }
+
+    public String getDataEntrada() {
+        return dataEntrada;
+    }
+
+    public void setDataEntrada(String dataEntrada) {
+        this.dataEntrada = dataEntrada;
+    }
+}
